1.16.5, 1.17.1 and 1.18.2 start update for remove deprecated api